# OPC-UA-based-Application-Monitoring-Tool

./: .~lock.MyOutput.csv#  .~lock.output.csv#  CMakeLists.txt  MyOutput.csv  cli
inc/: latency.h
lib/: latency.c  makefile
read_me/: Compilation commands.txt
src/: cli.c
